# gamehub

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pom.xml  pyproject.toml
.github/: run-test.yml
.github/workflows/: cd.yml  ci.yml  docker-build.yml  run-test.yml
alembic/: env.py
alembic/versions/: ce44aeff87f2_init.py
app/: main.py
app/adapters/persistence/: database.py
app/core/: config.py  logger.py
app/infrastructure/db/: database.py
docs/postman-collections/: User Auth & Managment.postman_collection.json
src/main/java/com/group4/gamehub/: GamehubApplication.java
src/main/java/com/group4/gamehub/config/: AdminProperties.java  AdminUserInitializer.java  CustomUserDetailsService.java  JwtAuthFilter.java  JwtProperties.java  JwtService.java  OpenApiConfig.java  SecurityConfig.java
src/main/java/com/group4/gamehub/controller/: AuthController.java  MatchController.java  MathController.java  TournamentController.java  TournamentsController.java  UserController.java
src/main/java/com/group4/gamehub/dto/: AuthResponse.java  LoginRequest.java  PublicUserResponse.java  RegisterRequest.java  UserResponse.java
src/main/java/com/group4/gamehub/dto/requests/auth/: Login.java  (+1 more)
src/main/java/com/group4/gamehub/exception/: CustomAccessDeniedHandler.java  GlobalExceptionHandler.java  JwtAuthEntryPoint.java  JwtAuthenticationException.java  NotFoundException.java  UserAlreadyExistsException.java  UserNotFoundException.java
src/main/java/com/group4/gamehub/mapper/: MatchMapper.java  TournamentMapper.java  UserMapper.java
src/main/java/com/group4/gamehub/model/: Match.java  MatchEntity.java  Message.java  MessageEntity.java  Result.java  Role.java  Status.java  Tournament.java  TournamentEntity.java  User.java  UserEntity.java
src/main/java/com/group4/gamehub/repository/: MatchRepository.java  TournamentRepository.java  UserRepository.java
src/main/java/com/group4/gamehub/service/: AuthService.java
src/main/java/com/group4/gamehub/util/: Result.java  Role.java  SlugUtil.java  Status.java
src/main/java/com/sebas/gamehub/: GamehubApplication.java
src/main/resources/: application-test.properties  application.properties
src/test/java/com/group4/gamehub/: GamehubApplicationTests.java
src/test/java/com/group4/gamehub/config/: AdminUserInitializerTest.java  JwtServiceTest.java
src/test/java/com/group4/gamehub/controller/: AuthControllerTest.java  MatchControllerTest.java  UserControllerTest.java
src/test/java/com/group4/gamehub/integration/: AppIntegrationTest.java
src/test/java/com/sebas/gamehub/: GamehubApplicationTests.java
tests/: conftest.py  test_context.py
tests/config/: db_helpers.py
(+54 files in other folders)
