[project]
name = "gamehub"
version = "0.1.0"
description = "Backend for an online video game tournament organization platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "hatchling>=1.29.0",
]
lint = [
    "ruff>=0.15.8",
    "ty>=0.0.26"
]
test = [
    "asyncpg>=0.31.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "testcontainers>=4.14.2"
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty]

[tool.pytest.ini_options]
addopts = "-vvv --cov=app --cov-report=term-missing --cov-report=html:reports/coverage tests/"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
omit = [
    "main.py",
    "__init__.py",
    "logger.py"
]
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
